# routers/router.go
@@ -1,5 +1,5 @@
 // @APIVersion 1.0.0
-// @Title 暂时用作excle导入到临时表
+// @Title 便于开发的工具集合
 // @Description nothing to talk.
 // @Contact alloyjetereting@gmail.com
 package routers
@@ -11,7 +11,7 @@ import (
 
 func init() {
 	ns := beego.NewNamespace("/api",
-		beego.NSNamespace("/main",
-			beego.NSInclude(&controllers.MainController{})))
+		beego.NSNamespace("/excelToMysql",
+			beego.NSInclude(&controllers.ExcelToMysqlController{})))
 	beego.AddNamespace(ns)
 }
